# Analisis-Numerico

./: CMakeLists.txt  funcionesMatriz.cpp  funcionesMatriz.h  main.cpp
Derivación Numérica/: Derivacion.cpp  Derivacion.h
Ecuaciones Diferenciales/: EcuacionesDiferenciales.cpp  EcuacionesDiferenciales.h
Funciones Matriz/: funcionesMatriz.cpp  funcionesMatriz.h
Integración Numérica/: Integracion.cpp  Integracion.h
Interpolación de Polinomios/: Interpolacion.cpp  Interpolacion.h
Raíces/: Raiz.cpp  Raiz.h
Sistemas de Ecuaciones/: SistEcuaciones.cpp  SistEcuaciones.h
